stateDiagram-v2
    state "Registration Status" as Registration {
        [*] --> pending
        pending --> approved: admin approves
        pending --> rejected: admin rejects with remarks
        rejected --> pending: resubmission
        approved --> approved: updates
    }

    state "Device Status" as Device {
        [*] --> active
        active --> inactive: admin deactivates
        inactive --> active: admin reactivates if allowed
    }

    state "Derived Campus State" as Campus {
        [*] --> outside
        outside --> inside: latest log is entry
        inside --> outside: latest log is exit
    }
